Fix horizontal scroll on mobile, move about contents up, one line card text

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -4,13 +4,8 @@
   color: #202020;
 }
 
-.About {
-  margin-left: 3vw;
-  margin-right: 3vw;
-}
-
 .AboutTitle {
-  margin-top: 4vh;
+  margin-top: 3vh;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -37,7 +32,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
-  margin-bottom: 6vh;
+  margin-bottom: 5vh;
 }
 
 .AboutCard {
@@ -87,6 +82,8 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   padding-top: 3vh;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .WorkExperience,
